--- a/src/app.css
+++ b/src/app.css
@@ -28,3 +28,13 @@ body {
 main > h1 {
 	text-indent: 30px;
 }
+
+table {
+	border-radius: 8px;
+	display: inline-block;
+	box-shadow: 0 15px 15px 5px rgb(192, 192, 192);
+}
+
+.fa.fa-star.checked {
+	color: orange;
+}
